have form completed

--- a/src/app/confirm/confirm.component.html
+++ b/src/app/confirm/confirm.component.html
@@ -1,3 +1,10 @@
-<p>
-  confirm works!
-</p>
+<div class="card hoverable">
+  <div class="card-content">
+    <span class="card-title">Please confirm the details</span>
+
+  </div>
+  <div class="card-action">
+    <a href="#">This is a link</a>
+    <a href="#">This is a link</a>
+  </div>
+</div>
