--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,16 +2,8 @@
 <div class="container">
   <div class="row valign-wrapper">
     <div class="col s12 m6 l6 offset-m3 offset-l3 valign">
-      <div class="card hoverable">
-        <div class="card-content">
-          <span class="card-title">{{title}}</span>
-          <router-outlet></router-outlet>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
-        </div>
-      </div>
+      <h2 class="center-align">{{title}}</h2>
+      <router-outlet></router-outlet>
     </div>
   </div>
 
