--- a/src/app/confirm/confirm.component.html
+++ b/src/app/confirm/confirm.component.html
@@ -5,6 +5,7 @@
   </div>
   <div class="card-action">
     <a href="#">This is a link</a>
-    <a href="#">This is a link</a>
+    <button class="btn waves-effect waves-light red lighten-1"><a [routerLink]="['/subscription']">Back</a></button>
+    <button type="submit" class="btn waves-effect waves-light">Confirm your selection<i class="material-icons right">send</i></button>
   </div>
 </div>
