--- a/src/app/confirm/confirm.component.html
+++ b/src/app/confirm/confirm.component.html
@@ -1,11 +1,23 @@
 <div class="card hoverable">
   <div class="card-content">
     <span class="card-title">Please confirm the details</span>
-
+    <ul class="collection">
+       <li class="collection-item">
+         Name: {{model.name}}
+       </li>
+       <li class="collection-item">
+         Email: {{model.email}}
+       </li>
+       <li class="collection-item">
+         input {{model.password}}
+       </li>
+       <li class="collection-item">
+         Subscription: {{model.subscription}}
+       </li>
+    </ul>
   </div>
   <div class="card-action">
-    <a href="#">This is a link</a>
-    <button class="btn waves-effect waves-light red lighten-1"><a [routerLink]="['/subscription']">Back</a></button>
+    <button class="btn waves-effect waves-light red lighten-1" [routerLink]="['/subscription']">Back</button>
     <button type="submit" class="btn waves-effect waves-light">Confirm your selection<i class="material-icons right">send</i></button>
   </div>
 </div>
